force-app/main/default/objects/Construction_Milestone__c/fields/Delay_Days__c.field-meta.xml
<CustomField>
    <fullName>Delay_Days__c</fullName>
    <description>Delay in days: Actual Completion Date – Planned Completion Date</description>
    <formula>IF( AND( NOT(ISBLANK(Actual_Completion_Date__c)), NOT(ISBLANK(Planned_Completion_Date__c)) ), Actual_Completion_Date__c - Planned_Completion_Date__c, 0 )</formula>
    <label>Delay Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>