force-app/main/default/objects/Construction_Milestone__c/fields/Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name__c</fullName>
    <description>Name of the construction milestone (e.g., Excavation, Plinth, Slab)</description>
    <label>Milestone Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>