force-app/main/default/objects/Construction_Milestone__c/fields/Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start_Date__c</fullName>
    <description>Planned start date</description>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>