force-app/main/default/objects/Construction_Milestone__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <description>Execution order of the milestone</description>
    <label>Sequence Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>