force-app/main/default/objects/Construction_Milestone__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent tower / block</description>
    <label>Tower</label>
    <referenceTo>Block__c</referenceTo>
    <relationshipLabel>Construction Milestones</relationshipLabel>
    <relationshipName>Construction_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>